# funds

./: .gitignore  DESIGN.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
config/: prompts.json
database/: __init__.py  connection.py  init_db.py  models.py
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: AddFundDialog.vue  FundList.vue  SettingsDrawer.vue
frontend/src/router/: index.js
frontend/src/stores/: funds.js  settings.js
frontend/src/utils/: format.js
frontend/src/views/: FundDetailView.vue  HomeView.vue
routers/: __init__.py  ai.py  etf.py  funds.py  holdings.py  market.py  trades.py
services/: __init__.py  ai_service.py  etf_service.py  fund_detail_service.py  fund_service.py  index_service.py  market_sentiment_service.py  market_service.py  news_service.py  sync_scheduler.py
static/css/: style.css
static/js/: api.js  app.js
templates/: index.html
utils/: __init__.py  helpers.py  indicators.py  rate_limiter.py
